--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 <body>
 
     <header class="header clearfix">
-        <span>ELECTRON</span>
-        
-        <a id="close" class="btn-conch"><i class="iconfont icon-close1"></i></a>
-        <a class="btn-conch"><i class="iconfont icon-window1"></i></a>
+        <a class="btn-conch"><i class="iconfont icon-close1"></i></a>
+        <a class="btn-conch"><i class="iconfont icon-zuidahua"></i></a>
+        <a class="btn-conch"><i class="iconfont icon-zuixiaohua"></i></a>
+        <b>C ONCH</b>
     </header>
 
     <div class="container">
-        <a href="index.html">REFRESH</a>
+        
     </div>
 
     <footer class="footer">
-        <i class="iconfont icon-mulu1 btn-conch"></i>
+        <a href="index.html" class="btn-conch"><i class="iconfont icon-mulu1"></i></a>
     </footer>
 
 </body>
