--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 <body>
 
     <header class="header clearfix">
-        <span>ELECTRON</span>
-        
-        <a id="close" class="btn-conch"><i class="iconfont icon-close1"></i></a>
+        <a class="btn-conch"><i class="iconfont icon-close1"></i></a>
         <a class="btn-conch"><i class="iconfont icon-window1"></i></a>
     </header>
 
