--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
     </header>
 
     <div class="container">
-        
+
     </div>
 
     <footer class="footer">
+        <a href="javascript:;" class="btn-conch"><i class="iconfont icon-shezhi"></i></a>
         <a href="index.html" class="btn-conch"><i class="iconfont icon-mulu1"></i></a>
     </footer>
 
