--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body>
 
     <header class="header clearfix">
-        <a class="btn-conch"><i class="iconfont icon-close1"></i></a>
-        <a class="btn-conch"><i class="iconfont icon-zuidahua"></i></a>
-        <a class="btn-conch"><i class="iconfont icon-zuixiaohua"></i></a>
-        <b>C ONCH</b>
+        <ul>
+            <li><i class="iconfont icon-zuixiaohua btn-conch"></i></li>
+            <li><i class="iconfont icon-zuidahua btn-conch"></i></li>
+            <li><i class="iconfont icon-close1 btn-conch"></i></li>
+        </ul>
+        <b>贝壳</b>
     </header>
 
     <div class="container">
