--- a/index.html
+++ b/index.html
@@ -5,27 +5,32 @@
     <title>conch</title>
 
     <meta name="viewport" content="initial-scale=1,maximum-scale=1, minimum-scale=1">
-    <link rel="stylesheet" media="screen" href="assets/iconfont/iconfont.css">
+    <link rel="stylesheet" media="screen" href="http://at.alicdn.com/t/font_412015_mokisqfngnmnp14i.css">
     <link rel="stylesheet" media="screen" href="assets/css/conch.css">
 </head>
 <body>
 
-    <header class="header clearfix">
-        <ul>
-            <li><i class="iconfont icon-zuixiaohua btn-conch"></i></li>
-            <li><i class="iconfont icon-zuidahua btn-conch"></i></li>
-            <li><i class="iconfont icon-close1 btn-conch"></i></li>
-        </ul>
-        <b>贝壳</b>
-    </header>
+
 
     <div class="container">
+
+        <header class="header">
+            <b>贝壳</b>
+            <div class="winctl clearfix">
+                <i class="iconfont icon-zuixiaohua btn-conch"></i>
+                <i class="iconfont icon-zuidahua btn-conch"></i>
+                <i class="iconfont icon-close1 btn-conch"></i>
+            </div>
+        </header>
 
     </div>
 
     <footer class="footer">
-        <a href="javascript:;" class="btn-conch"><i class="iconfont icon-shezhi"></i></a>
-        <a href="index.html" class="btn-conch"><i class="iconfont icon-mulu1"></i></a>
+        <ul class="clearfix">
+            <li><a href="index.html"><i class="iconfont icon-shezhi btn-conch"></i></a></li>
+            <li><i class="iconfont icon-wenzhang2 btn-conch"></i></li>
+            <li><i class="iconfont icon-delete1 btn-conch"></i></li>
+        </ul>
     </footer>
 
 </body>
