--- a/index.html
+++ b/index.html
@@ -14,24 +14,30 @@
 
     <div class="container">
 
-        <header class="header">
-            <b>贝壳</b>
-            <div class="winctl clearfix">
-                <i class="iconfont icon-zuixiaohua btn-conch"></i>
-                <i class="iconfont icon-zuidahua btn-conch"></i>
-                <i class="iconfont icon-close1 btn-conch"></i>
-            </div>
-        </header>
+        <aside class="menu">
+            <nav>
+                <i class="iconfont icon-wenzhang btn-conch"></i>
+                <i class="iconfont icon-delete1 btn-conch"></i>
+                <i class="iconfont icon-shezhi btn-conch"></i>
+            </nav>
+
+
+        </aside>
+
+        <div class="main">
+            <header class="header">
+                <ul class="winctl clearfix">
+                    <li><i class="iconfont icon-zuixiaohua btn-conch"></i></li>
+                    <li><i class="iconfont icon-zuidahua btn-conch"></i></li>
+                    <li><i class="iconfont icon-close1 btn-conch"></i></li>
+                </ul>
+            </header>
+            <span class="widen"></span>
+
+            <div class="console"></div>
+        </div>
 
     </div>
-
-    <footer class="footer">
-        <ul class="clearfix">
-            <li><a href="index.html"><i class="iconfont icon-shezhi btn-conch"></i></a></li>
-            <li><i class="iconfont icon-wenzhang2 btn-conch"></i></li>
-            <li><i class="iconfont icon-delete1 btn-conch"></i></li>
-        </ul>
-    </footer>
 
 </body>
 
