--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>conch</title>
 
     <meta name="viewport" content="initial-scale=1,maximum-scale=1, minimum-scale=1">
-    <link rel="stylesheet" media="screen" href="http://at.alicdn.com/t/font_412015_mokisqfngnmnp14i.css">
+    <link rel="stylesheet" media="screen" href="http://at.alicdn.com/t/font_412015_vioqiwjc2691kyb9.css">
     <link rel="stylesheet" media="screen" href="assets/css/conch.css">
 </head>
 <body>
@@ -15,11 +15,14 @@
     <div class="container">
 
         <aside class="menu">
+            
             <nav>
-                <i class="iconfont icon-wenzhang btn-conch"></i>
+                <i class="iconfont icon-wenzhang btn-conch active"></i>
                 <i class="iconfont icon-delete1 btn-conch"></i>
                 <i class="iconfont icon-shezhi btn-conch"></i>
             </nav>
+
+
 
 
         </aside>
@@ -41,5 +44,6 @@
 
 </body>
 
+<script src="assets/js/vue.min.js"></script>
 <script src="assets/js/conch.js"></script>
 </html>
