--- a/index.html
+++ b/index.html
@@ -3,44 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>conch</title>
-
     <meta name="viewport" content="initial-scale=1,maximum-scale=1, minimum-scale=1">
     <link rel="stylesheet" media="screen" href="http://at.alicdn.com/t/font_412015_vioqiwjc2691kyb9.css">
     <link rel="stylesheet" media="screen" href="assets/css/conch.css">
 </head>
 <body>
 
-
-
     <div class="container">
-
         <aside class="menu">
-
             <nav>
                 <i class="iconfont icon-wenzhang btn-conch active"></i>
                 <i class="iconfont icon-delete1 btn-conch"></i>
                 <i class="iconfont icon-shezhi btn-conch"></i>
             </nav>
 
-
-
+            <div class="menu-a">
+                <header>文库</header>
+            </div>
 
         </aside>
 
         <div class="main">
+            <span class="widen"></span>
             <header class="header">
-                <i class="iconfont icon-mulu1 btn-conch"></i>
+                <i class="iconfont icon-mulu1 btn-conch menuctl"></i>
                 <ul class="winctl clearfix">
                     <li><i class="iconfont icon-zuixiaohua btn-conch"></i></li>
                     <li><i class="iconfont icon-zuidahua btn-conch"></i></li>
                     <li><i class="iconfont icon-close1 btn-conch"></i></li>
                 </ul>
             </header>
-            <span class="widen"></span>
+
+            <div class="editor-box">
+                <textarea class="editor" placeholder="写..."></textarea>
+            </div>
 
             <div class="console"></div>
         </div>
-
     </div>
 
 </body>
