--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <i class="iconfont icon-shezhi btn-conch" data-sec="2"></i>
             </nav>
 
-            <div class="menu-b">
+            <div id="menu-b" class="menu-b">
                 <header>猫</header>
                 <ul>
                     <li>整个夏天，这只猫都在喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵...</li>
@@ -33,29 +33,20 @@
                     </header>
                     <ul class="list">
                         <li class="folder expanded">
-                            <p class="folder-header">
-                                <i class="iconfont icon-sanjiao"></i>
-                                <span>最近</span>
-                            </p>
+                            <p class="folder-header"><i class="iconfont icon-sanjiao"></i>最近</p>
                             <ul>
-                                <li><i class="iconfont icon-wenzhang"></i>猫</li>
+                                <li data-type="novel"><i class="iconfont icon-wenzhang"></i>猫</li>
                                 <li><i class="iconfont icon-wenzhang"></i>湖畔杀人事件</li>
                             </ul>
                         </li>
                         <li class="folder">
-                            <p class="folder-header">
-                                <i class="iconfont icon-sanjiao"></i>
-                                <span>短文</span>
-                            </p>
+                            <p class="folder-header"><i class="iconfont icon-sanjiao"></i>短文</p>
                             <ul>
                                 <li><i class="iconfont icon-wenzhang"></i>猫</li>
                             </ul>
                         </li>
                         <li class="folder">
-                            <p class="folder-header">
-                                <i class="iconfont icon-sanjiao"></i>
-                                <span>小说</span>
-                            </p>
+                            <p class="folder-header"><i class="iconfont icon-sanjiao"></i>小说</p>
                             <ul>
                                 <li><i class="iconfont icon-wenzhang"></i>湖畔杀人事件</li>
                                 <li><i class="iconfont icon-wenzhang"></i>解忧杂货店</li>
@@ -65,10 +56,7 @@
                             </ul>
                         </li>
                         <li class="folder">
-                            <p class="folder-header">
-                                <i class="iconfont icon-sanjiao"></i>
-                                <span>记事本</span>
-                            </p>
+                            <p class="folder-header"><i class="iconfont icon-sanjiao"></i>记事本</p>
                             <ul>
                                 <li class="nonelist">: ( 空空如也</li>
                             </ul>
