--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>conch</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1, minimum-scale=1">
-    <link rel="stylesheet" media="screen" href="http://at.alicdn.com/t/font_412015_qyj6mdggnr3vj9k9.css">
+    <link rel="stylesheet" media="screen" href="http://at.alicdn.com/t/font_412015_14wjb3xfoqnwb3xr.css">
     <link rel="stylesheet" media="screen" href="assets/css/conch.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
             <div id="menu-b" class="menu-b">
                 <header>猫</header>
                 <ul>
-                    <li>整个夏天，这只猫都在喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵...</li>
+                    <li class="active">整个夏天，这只猫都在喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵喵...</li>
                     <li>洞穴的比喻，司武丽是我见过最美的回教徒，或者说曾经的回教徒。她的美丽是安拉所不容的...</li>
                 </ul>
             </div>
@@ -97,7 +97,10 @@
                 <textarea class="editor" placeholder="写..."></textarea>
             </div>
 
-            <div class="console"></div>
+            <div class="console">
+
+                <i class="iconfont icon-fullscreen btn-conch"></i>
+            </div>
         </div>
     </div>
 
