下拉框样式

--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
                     <ul class="list"></ul>
                 </section>
 
-                <section class="show">
+                <section class="setting show">
                     <header>
                         <b>设置</b>
                     </header>
-                    <label for="select">主题: </label>
+                    <label for="select">主题</label>
                     <select class="select" name="drd">
                         <option value="1">默认</option>
                         <option value="2">Black Soul</option>
