--- a/index.html
+++ b/index.html
@@ -111,8 +111,12 @@
             </header>
 
             <!-- 内容区 -->
-            <div class="editor-box">
+            <div id="editor-box" class="editor-box webview">
                 <textarea id="editor" class="editor" placeholder="写..."></textarea>
+            </div>
+
+            <div class="webview show reader-box" style="display: block;">
+
             </div>
 
             <!-- 底部栏 -->
@@ -130,6 +134,5 @@
 
 </body>
 
-<script src="assets/js/vue.min.js"></script>
 <script src="assets/js/conch.js"></script>
 </html>
